@@ -1,5 +1,5 @@
-4eb3cc5471c9d32f0b6cc200dff2325a *ChangeLog
-917fc19c0de919deff4046519bf0ca8f *DESCRIPTION
+982f63bf941a329959ce82c064b3bb61 *ChangeLog
+7964c6b207bd5f901d7e5308c79938b2 *DESCRIPTION
 d72597d2556c6c7756f27e07569ee592 *NAMESPACE
 298f7e7509911b1e4dddff149d691b3c *R/antoch.test.R
 69ec36fba928c7a5156286810b3f52bd *R/chngpt.test.2.R
@@ -19,8 +19,8 @@ ee6e5c17e1479c09ab44d478b43ae080 *data/dat.mtct.rda
 47748e0bc833c4101cb729e25e1564d0 *data/lidar.rda
 7f71850e2bf4527628678b688a85077b *data/nutrition.rda
 ea25138d0df2c1eada8655acc16886da *data/sim.alphas.rda
-d68fe8e41ea91aabf748f9cb3af44c68 *inst/CITATION
-70bcc52a059fb67a647a37b7c1d49ad2 *inst/doc/chngpt-vignette.pdf
+f9794e631245db7a207f72ea834783c8 *inst/CITATION
+a85a2f2b28601975247d0a6ce8427a50 *inst/doc/chngpt-vignette.pdf
 82e747aa9aeaf112cb1b9113ff6d881f *inst/doc/chngpt-vignette.pdf.asis
 a616e808bd826e929f56223020649675 *inst/unitTests/Makefile
 0c12c1ada770c9626aae4253db6d4e85 *inst/unitTests/report.html
@@ -56,12 +56,12 @@ a9889dd60763640e3c54f8890a115ee8 *src/M20.cc
 f9dd03ffeae81d3409a0930fa6f2c07b *src/M22c.cc
 930848b9a1aaf47c3696e399c6afff69 *src/M30.cc
 06066fa3ff64ceaa3b1d3627518d2a3e *src/M33c.cc
-016d303d4f450d476477d98da6763562 *src/Makevars
-5a790b9ad72865c5ee173ef34f1ba825 *src/Makevars.win
+1f2958f45770fcf1762decf37d039a64 *src/Makevars
+31a25184d29377d4fc457009583a3ad0 *src/Makevars.win
 97d03f4f6a35fe9a46ee824d4eb8496c *src/Mstep.cc
 3137629ac8a86e4d3decdb1819cf8b36 *src/algorithm.h
-80eab6b8072ae34de6c192af41324093 *src/datablock.h
-5da8702c23b61c037f61dccebec10838 *src/defs.h
+ec2eb630495c656b2ba0089270e21191 *src/datablock.h
+c1bfb8e0ffaaad2dcb9b8db81d30fb12 *src/defs.h
 62288e8cb29f90983d0ab28852cf5ba7 *src/distributions.h
 6ff33af903206802c07f51994128d028 *src/doublehinge.c
 3d65ef95b4030a8ff30b2645ee0f2832 *src/error.h
@@ -71,13 +71,13 @@ f9dd03ffeae81d3409a0930fa6f2c07b *src/M22c.cc
 7464cb511e25617d81fb1bc50f4d6a03 *src/fastgrid_helper.h
 c057066e13cf978636f96533c4d574f2 *src/grid.cc
 0b1465cd303a39f5bd6ccb327e1e4b1f *src/ide.h
-822c244edb53be2f4f8b1e831abe16fb *src/la.h
+8000bc29ea3b956b5eab57a01368acbb *src/la.h
 41a6caea698666bf78dda6d4d8b923e8 *src/lapack.h
-9027236ee9d4fe0225b785f0776ebed2 *src/matrix.h
-7ab16dbb6757a5de37dc7de9867a3c10 *src/matrix_bidirectional_iterator.h
-f924b218cd6eaed80846ed0cba534b03 *src/matrix_forward_iterator.h
-3dc8b8e303daa7ffdf3e2d29b2fa43d9 *src/matrix_random_access_iterator.h
-29e66ede0b4c9fc720e28df839e9ddd2 *src/performance.cc
+cc805534800dd9739dd6693b54e29eee *src/matrix.h
+212028da45e39d138624604b73d3a8d9 *src/matrix_bidirectional_iterator.h
+0afa2323471a13395cfb7a30952cba82 *src/matrix_forward_iterator.h
+4bb2feb70e25cab7086aea0f2e256a0f *src/matrix_random_access_iterator.h
+949e8881d805fa8d5459c2dceee8ee7d *src/performance.cc
 ccc4f8e1c281a0148946bf412ca9adb2 *src/registerDynamicSymbol.c
 d0cf994cd4c6886f8bd348c351a00ecf *src/rng.h
 7fec446712064aa53f2e4350067f48fa *src/smath.h
